@@ -1,5 +1,7 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+7/12/14: Added Object menu item to fill in Z in all contours.
+
 7/11/14: Fixed inability to use patch tracking if cumulative correlation was
 checked in coarse alignment (In 4.7).
 
